--- a/module-03/index.html
+++ b/module-03/index.html
@@ -16,7 +16,7 @@
                  <li><a href="">lifestyle</a></li>
                  <li><a href="">photodiary</a></li>
                  <li><a href="">music</a></li>
-                 <li><a href="">travel</a></li>
+                 <li class="link"><a href="">travel</a></li>
                 
             </ul>
         </nav>
