--- a/module-04/index.html
+++ b/module-04/index.html
@@ -30,7 +30,8 @@
                 <h2 class="row-list-heading">Featured products</h2>
             
                 <ul class="row-list clearfix">
-                    <li><a href="#" class="row-list-rectangle">
+                    <li class="row-list-rectangle">
+                         <a href="#" class="">
                         <img class="row-list-image" src="img/image1.jpg" alt="row member image" width="255" height="322">
                         <div class="row-list-name clearfix">
                             <h2 class="row-list-names">blue tshirt</h2>
@@ -38,7 +39,8 @@
                         </div>
                     </a>
                     </li>
-                    <li><a href="#" class="row-list-rectangle">
+                    <li class="row-list-rectangle">
+                         <a href="#" class="">
                         <img class="row-list-image" src="img/image2.jpg" alt="row member image" width="255" height="322">
                         <div class="row-list-name clearfix">
                             <h2 class="row-list-names">woman shirt</h2>
@@ -46,7 +48,8 @@
                         </div>
                        </a> 
                     </li>
-                    <li><a href="#" class="row-list-rectangle">
+                    <li class="row-list-rectangle">
+                         <a href="#" class="">
                         <img class="row-list-image" src="img/image3.jpg" alt="row member image" width="255" height="322">
                         <div class="row-list-name clearfix">
                             <h2 class="row-list-names">yelloy tshirt</h2>
@@ -54,7 +57,8 @@
                         </div>
                         </a>
                     </li>
-                    <li><a href="#" class="row-list-rectangle">
+                    <li class="row-list-rectangle">
+                         <a href="#" class="">
                         <img class="row-list-image" src="img/image4.jpg" alt="row member image" width="255" height="322">
                         <div class="row-list-name clearfix">
                             <h2 class="row-list-names">Cool lingerie</h2>
@@ -62,7 +66,8 @@
                         </div>
                         </a>
                     </li>
-                    <li><a href="#" class="row-list-rectangle">
+                    <li class="row-list-rectangle">
+                        <a href="#" class="">
                         <img class="row-list-image" src="img/image5.jpg" alt="row member image" width="255" height="322">
                         <div class="row-list-name clearfix">
                             <h2 class="row-list-names">blue tshirt</h2>  
@@ -70,7 +75,8 @@
                         </div>
                         </a>
                     </li>
-                    <li><a href="#" class="row-list-rectangle">
+                    <li class="row-list-rectangle">
+                         <a href="#" class="">
                         <img class="row-list-image" src="img/image6.jpg" alt="row member image" width="255" height="322">
                         <div class="row-list-name clearfix">
                             <h2 class="row-list-names">woman shirt</h2>
@@ -79,7 +85,8 @@
                         </div>
                        </a> 
                     </li>
-                    <li><a href="#" class="row-list-rectangle">
+                    <li class="row-list-rectangle">
+                       <a href="#" class="">
                         <img class="row-list-image" src="img/image7.jpg" alt="row member image" width="255" height="322">
                         <div class="row-list-name clearfix">
                             <h2 class="row-list-names">yelloy tshirt</h2>
@@ -87,7 +94,8 @@
                         </div>
                        </a> 
                     </li>
-                    <li><a href="#" class="row-list-rectangle">
+                    <li class="row-list-rectangle">
+                        <a href="#" class="">
                         <img class="row-list-image" src="img/image8.jpg" alt="row member image" width="255" height="322">
                         <div class="row-list-name clearfix">
                             <h2 class="row-list-names">Cool lingerie</h2>
