--- a/module-05/index.html
+++ b/module-05/index.html
@@ -192,26 +192,10 @@
       </main>
       <footer class="works">
           <div class="container">
-          <ul class="tabs-list clearfix">
-              <li class="tabs-list_item">
-                  <button class="tabs-list_btn">All</button>
-              </li>
-              <li class="tabs-list_item">
-                <button class="tabs-list_btn">Rights</button>
-              </li>
-              <li class="tabs-list_item">
-                <button class="tabs-list_btn">Reserved</button>
-              </li>
-              <li class="tabs-list_item">
-                <button class="tabs-list_btn">Docan</button>
-              </li>
-              <li class="tabs-list_item">
-                <button class="tabs-list_btn">Designed</button>
-              </li>
-              <li class="tabs-list_item">
-                <button class="tabs-list_btn activ-tab">ThemenGraph</button>
-              </li>
-          </ul>
+          <p class="works_list"> 
+            All Rights Reserved © Dokan | Designed 
+            <a class="works_list-link">ThemenGraph</a>
+          </p>
           </div>
       </footer> 
     </body>
