--- a/module-08/index.html
+++ b/module-08/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>     
-<html>
+<html lang=“en”>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -71,6 +71,7 @@
                             <p class="partners_list-item_name">Bradley Hunter</p>
                             <p class="partners_list-item_post">Based in Chicago. I love playing tennis and loud music.</p>
                         </li>
+                    </ul>
                 </div>
                 <a href="#" class="dreams-link dreams_link-find">See other partners</a>
            
